redraw on resize

--- a/index.html
+++ b/index.html
@@ -80,27 +80,25 @@
         <p>Можна припустити, що на момент першої смерті в Україні хворих було суттєво більше (і тоді крива для нашої країни має бути вищою та пролягати на рівні кривих більшості інших країн). Схожа на українську картина – в Ірані та Болгарії (в Ірані теж велика проблема з тестами). Щодо динаміки для нашої країни, про це наразі говорити рано – поки що є мало даних.</p>
 
         <div id="chart_wrapper">
-            <h3 class="set-width">COVID-19. Кількість захворювань по днях, починаючи з першої смерті. Станом на <span id="today"></span>.</h3>
-            <p class="set-width">У багатьох країнах перша смерть зафіксована після приблизно сотні виявлених хворих. В Україні перша смерть сталася при дуже малій кількості виявлених хворих. Це означає, що наш МОЗ дуже погано проводить тестування.</p>
-            <div class="set-width" id="chart"></div>
-            <p class="source">Дані: https://github.com/CSSEGISandData/COVID-19/</p>
+            <h3 class="">COVID-19. Кількість захворювань по днях, починаючи з першої смерті. Станом на <span id="today"></span>.</h3>
+            <p class="">У багатьох країнах перша смерть зафіксована після приблизно сотні виявлених хворих. В Україні перша смерть сталася при дуже малій кількості виявлених хворих. Це означає, що наш МОЗ дуже погано проводить тестування.</p>
+            <div class="" id="chart"></div>
+            <p class="source">Дані: Johns Hopkins CSSE <br> github.com/CSSEGISandData/COVID-19</p>
         </div>
 
         <p>Ще одна особливість цього графіка – вісь Y має логарифмічний, а не звичний для нас лінійний масштаб. Це означає, що точки на однакових інтервалах вздовж осі Y мають значення, що відрізняються в десятки разів. Тобто, пряма лінія на такому графіку – це експоненційне зростання; якщо крива відхиляється вниз до горизонталі (наприклад, Китай) – це значить, що ситуація покращується; якщо близька до прямої або відхиляється від прямої вгору (США) – це означає, що відбувається неконтрольоване поширення вірусу.</p>
 
-        <h3 style="margin-top: 50px;">Детальніше про ситуацію в Україні</h3>
-        <p>Наразі в Україні <a href="https://texty.org.ua/fragments/100636/uryad-zaklykayut-vidkryty-dani-po-covid-19/">відсутні</a> офіційні відкриті дані щодо ситуації з коронавірусом. Для графіків нижче дані взяті з <a href="https://public.tableau.com/profile/publicviz#!/vizhome/monitor_15841091301660/sheet0">дашборду</a> на tableau public, що створений Директоратом регіональної політики Офісу Президента.</p>
+       <h3 style="margin-top: 50px;">Кількість хворих в Україні подвоюється кожні 2-3 дні</h3>
+       <p class="">Перший випадок захворювання був діагностований 31 січня, але помітне зростання почалося у другій половині березня. Сірі пунктирні лінії моделюють ситуації, коли подвоєння випадків захворювання відбувається щоденно/щодва дні/щотри дні. Як видно з графіка. Зараз кількість хворих подвоюється кожні 2-3 дні.</p>
 
          <div id="charts">
              <div id="growth_speed">
-                 <h3 class="">Динаміка зростання кількості хворих</h3>
-                 <p class="">Перший випадок захворювання був діагностований 31 січня, але помітне зростання почалося у другій половині березня. Сірі пунктирні лінії моделюють ситуації, коли подвоєння випадків захворювання відбувається щоденно/щодва дні/щотри дні. Як видно з графіка. Зараз кількість хворих подвоюється кожні 2-3 дні.</p>
-
+                 <p class="source">Дані: Johns Hopkins CSSE <br> github.com/CSSEGISandData/COVID-19</p>
              </div>
-
-             <div></div>
         </div>
 
+       <h3 style="margin-top: 50px;">Детальніше про ситуацію в Україні</h3>
+       <p>Наразі в Україні <a href="https://texty.org.ua/fragments/100636/uryad-zaklykayut-vidkryty-dani-po-covid-19/">відсутні</a> офіційні відкриті дані щодо ситуації з коронавірусом. Для графіків нижче дані взяті з <a href="https://public.tableau.com/profile/publicviz#!/vizhome/monitor_15841091301660/sheet0">дашборду</a> на tableau public, що створений Директоратом регіональної політики Офісу Президента.</p>
 
         <div id="maps">
             <h3>Кількість осіб з підозрою на covid-19 по регіонах. Усього cтаном на <span class="current-date"></span> – <span class="numeral" id="suspected_amount"></span></h3>
