--- a/index.html
+++ b/index.html
@@ -70,35 +70,38 @@
 
    <main>
         <h1>Вірус: хворі в Україні та світі. Оновлюється</h1>
-        <h3>Чим більш ефективний карантин та інші заходи протидії вірусу, такі як відстеження усіх хворих і їх ізоляція, тим повільніше поширюється захворювання. Порівнюйте траєкторію зростання кількості хворих в Україні та в інших країнах.
+        <h3 class="lead">Чим більш ефективний карантин та інші заходи протидії вірусу, такі як відстеження усіх хворих і їх ізоляція, тим повільніше поширюється захворювання. Порівнюйте траєкторію зростання кількості хворих в Україні та в інших країнах.
         </h3>
-        <p>Для першого графіка ми <a href="https://www.ft.com/__origami/service/image/v2/images/raw/http%3A%2F%2Fcom.ft.imagepublish.upp-prod-eu.s3.amazonaws.com%2F9c58dd44-6c77-11ea-89df-41bea055720b?fit=scale-down&quality=highest&source=next&width=1260" target="_blank">запозичили ідею</a> для інфографіки у Financial Times, але за точку відліку взяли не сотий випадок зараження, як FT, а першу смерть. В результаті отримали цікавий патерн.</p>
-        <p>В інших країнах з цієї графіки перша смерть сталася, коли кількість діагностованих випадків перевалила далеко за сотню.
-        </p>
-        <p>Однак зверніть увагу, наскільки нижче сягає лінія, яка показує поширення захворювання в Україні, якщо порівнювати з більшістю інших країн. Так відбувається через те, що перша смерть була зафіксована в Україні при дуже малій кількості підтверджених хворих. Причина, ймовірно, полягає у відсутності масштабного тестування в нашій країні.
-        </p>
-        <p>Можна припустити, що на момент першої смерті в Україні хворих було суттєво більше (і тоді крива для нашої країни має бути вищою та пролягати на рівні кривих більшості інших країн). Схожа на українську картина – в Ірані та Болгарії (в Ірані теж велика проблема з тестами). Щодо динаміки для нашої країни, про це наразі говорити рано – поки що є мало даних.</p>
 
-        <div id="chart_wrapper">
-            <h3 class="">COVID-19. Кількість захворювань по днях, починаючи з першої смерті. Станом на <span id="today"></span>.</h3>
-            <p class="">У багатьох країнах перша смерть зафіксована після приблизно сотні виявлених хворих. В Україні перша смерть сталася при дуже малій кількості виявлених хворих. Це означає, що наш МОЗ дуже погано проводить тестування.</p>
-            <div class="" id="chart"></div>
-            <p class="source">Дані: Johns Hopkins CSSE <br> github.com/CSSEGISandData/COVID-19</p>
-        </div>
 
-        <p>Ще одна особливість цього графіка – вісь Y має логарифмічний, а не звичний для нас лінійний масштаб. Це означає, що точки на однакових інтервалах вздовж осі Y мають значення, що відрізняються в десятки разів. Тобто, пряма лінія на такому графіку – це експоненційне зростання; якщо крива відхиляється вниз до горизонталі (наприклад, Китай) – це значить, що ситуація покращується; якщо близька до прямої або відхиляється від прямої вгору (США) – це означає, що відбувається неконтрольоване поширення вірусу.</p>
+       <p class="">Під час епідемій, головним є не кількість хворих, а швидкість та прискорення, з якою вони з’являються. На жаль, більшість ЗМІ цього не розуміє, і використовують сенсаційну форму подачі інформації, на кшталт “новий рекорд кількості хворих ...”. </p>
+       <p>Насправді, коли зростання експоненційне, то у найгірших випадках кількість хворих може подвоюватися щодня, і 1000 хворих в понеділок призводять до 64 000 в наступну неділю. Тому на графіку важливо показувати швидкість зростання, а не лише абсолютні числа. Швидкість зростання - це нахил траєкторії для країни: чим ближче він до горизонтальної лінії, тим краще. </p>
+       <p>Саме тому на нашому графіку, крім траєкторій країн, ви можете побачити сірі пунктирні лінії. Вони показують орієнтири для швидкості зростання кількості хворих. Такі лінії побудовані для декількох варіантів: коли випадки захворювання подвоюються щоденно(найбільша швидкість), щодва дні (трохи краще),  щотри (ще краще), тощо.
+       </p>
 
-       <h3 style="margin-top: 50px;">Кількість хворих в Україні подвоюється кожні 2-3 дні</h3>
-       <p class="">Перший випадок захворювання був діагностований 31 січня, але помітне зростання почалося у другій половині березня. Сірі пунктирні лінії моделюють ситуації, коли подвоєння випадків захворювання відбувається щоденно/щодва дні/щотри дні. Як видно з графіка. Зараз кількість хворих подвоюється кожні 2-3 дні.</p>
-
+       <h3 style="margin-top: 50px;">Кількість хворих подвоюється приблизно кожних 2.8 дні </h3>
+       <p> Як видно з графіка, траєкторія для України наразі знаходиться між лініями подвоєння за два і за три дні. Досвід інших країн говорить, що цю зону необхідно залишити якнайшвидше, щоб не повторити сценарій, наприклад Іспанії.</p>
          <div id="charts">
              <div id="growth_speed">
                  <p class="source">Дані: Johns Hopkins CSSE <br> github.com/CSSEGISandData/COVID-19</p>
              </div>
         </div>
 
+
+       <p>Ідею для наступного графіка ми <a href="https://www.ft.com/__origami/service/image/v2/images/raw/http%3A%2F%2Fcom.ft.imagepublish.upp-prod-eu.s3.amazonaws.com%2F9c58dd44-6c77-11ea-89df-41bea055720b?fit=scale-down&quality=highest&source=next&width=1260" target="_blank">запозичили</a> у Financial Times, але за точку відліку взяли не сотий випадок зараження, як FT, а першу смерть. В результаті отримали цікавий патерн: зверніть увагу, наскільки нижче сягає лінія, яка показує поширення захворювання в Україні, якщо порівнювати з більшістю інших країн. Так відбувається через те, що перша смерть була зафіксована в Україні при дуже малій кількості підтверджених хворих. Причина, ймовірно, полягає у відсутності масштабного тестування в нашій країні.</p>
+
+       <div id="chart_wrapper">
+           <h3 class="">COVID-19. Кількість захворювань по днях, починаючи з першої смерті. Станом на <span id="today"></span>.</h3>
+           <p class="">У багатьох країнах перша смерть зафіксована після приблизно сотні виявлених хворих. В Україні перша смерть сталася при дуже малій кількості виявлених хворих. Це означає, що наш МОЗ дуже погано проводить тестування.</p>
+           <div class="" id="chart"></div>
+           <p class="source">Дані: Johns Hopkins CSSE <br> github.com/CSSEGISandData/COVID-19</p>
+       </div>
+
+       <p>Ще одна особливість цього графіка – вісь Y має логарифмічний, а не звичний для нас лінійний масштаб. Це означає, що точки на однакових інтервалах вздовж осі Y мають значення, що відрізняються в десятки разів. Тобто, пряма лінія на такому графіку – це експоненційне зростання; якщо крива відхиляється вниз до горизонталі (наприклад, Китай) – це значить, що ситуація покращується; якщо близька до прямої або відхиляється від прямої вгору (США) – це означає, що відбувається неконтрольоване поширення вірусу.</p>
+
        <h3 style="margin-top: 50px;">Детальніше про ситуацію в Україні</h3>
        <p>Наразі в Україні <a href="https://texty.org.ua/fragments/100636/uryad-zaklykayut-vidkryty-dani-po-covid-19/">відсутні</a> офіційні відкриті дані щодо ситуації з коронавірусом. Для графіків нижче дані взяті з <a href="https://public.tableau.com/profile/publicviz#!/vizhome/monitor_15841091301660/sheet0">дашборду</a> на tableau public, що створений Директоратом регіональної політики Офісу Президента.</p>
+       <p>Цифри в цьому графіку і попередніх <b>можуть відрізнятись</b> через різну швидкість оновлення даних в різних джерелах. Наведіть на регіон/гексагон, щоб побачити інформацію по кількості</p>
 
         <div id="maps">
             <h3>Кількість осіб з підозрою на covid-19 по регіонах. Усього cтаном на <span class="current-date"></span> – <span class="numeral" id="suspected_amount"></span></h3>
@@ -111,7 +114,7 @@
                 <div class="map" id="hex_suspected"></div>
             </div>
 
-            <h3>Кількість підтверджених випадків covid-19 по регіонах. Усього cтаном на <span class="current-date"></span> – <span class="numeral" id="confirmed_amount"></span></h3>
+            <h3>Кількість підтверджених випадків covid-19 по регіонах. Усього cтаном на <span class="current-date"></span> – <span class="numeral" id="confirmed_amount_hopkins"></span></h3>
             <div>
                 <p>По областях</p>
                 <div class="map" id="ch_confirmed"></div>
