--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
        <p>Наразі в Україні <a href="https://texty.org.ua/fragments/100636/uryad-zaklykayut-vidkryty-dani-po-covid-19/">відсутні</a> офіційні відкриті дані щодо ситуації з коронавірусом. Для графіків нижче дані взяті з <a href="https://public.tableau.com/profile/publicviz#!/vizhome/monitor_15841091301660/sheet0">дашборду</a> на tableau public, що створений Директоратом регіональної політики Офісу Президента. <b>Цифри в цьому графіку і в попередніх можуть відрізнятись через різну швидкість оновлення даних в різних джерелах</b>. Наведіть на регіон або гексагон, щоб побачити інформацію по кількості.
 
         <div id="maps">
-            <h3>Кількість осіб з підозрою на covid-19 по регіонах. Усього cтаном на <span class="current-date"></span> – <span class="numeral" id="suspected_amount"></span></h3>
+            <h3>Кількість протестованих осіб по регіонах. Усього cтаном на <span class="current-date"></span> – <span class="numeral" id="suspected_amount"></span></h3>
             <div>
                 <p>По областях</p>
                 <div class="map" id="ch_suspected"></div>
