redraw on resize

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
    <main>
         <h1>Вірус: хворі в Україні та світі. Оновлюється</h1>
-        <h3 class="lead">Чим ефективніший карантин та інші заходи з протидії вірусу – такі як тестування, відстеження всіх хворих та їх ізоляція, масове носіння масок – тим повільніше поширюється захворювання. Порівняйте траєкторію зростання кількості хворих в Україні та в інших країнах.</h3>
+        <h3 class="lead">Чим ефективніший карантин та інші заходи з протидії вірусу – такі як <a href="https://texty.org.ua/articles/100519/ukrayina-na-ostannomu-misci-u-sviti-po-kilkosti-testiv-na-koronavirus-ce-shlyah-do-katastrofy/" target="_blank">тестування</a>, відстеження всіх хворих та їх ізоляція, <a href="https://texty.org.ua/fragments/100572/chomu-maska-dlya-kozhnoho-ce-duzhe-vazhlyvo/" target="_blank">масове носіння масок</a> – тим повільніше поширюється захворювання. Порівняйте траєкторію зростання кількості хворих в Україні та в інших країнах.</h3>
 
 
        <p class="">Під час епідемій головною є не кількість хворих, а швидкість та прискорення, з якими вони з’являються. На жаль, більшість ЗМІ цього не розуміє і використовує сенсаційну форму подачі інформації на кшталт “новий рекорд кількості хворих...”.</p>
@@ -111,7 +111,7 @@
                 <div class="map" id="hex_suspected"></div>
             </div>
 
-            <h3>Кількість підтверджених випадків covid-19 по регіонах. Усього cтаном на <span class="current-date"></span> – <span class="numeral" id="confirmed_amount_hopkins"></span></h3>
+            <h3>Кількість підтверджених випадків covid-19 по регіонах. Усього cтаном на <span class="current-date"></span> – <span class="numeral" id="confirmed_amount_"></span></h3>
             <div>
                 <p>По областях</p>
                 <div class="map" id="ch_confirmed"></div>
@@ -135,8 +135,7 @@
             <!--<div class="source">Дані: https://public.tableau.com/profile/publicviz#!/vizhome/monitor_15841091301660</div>-->
         </div>
 
-        <p>Раніше ми <a href="https://texty.org.ua/articles/100519/ukrayina-na-ostannomu-misci-u-sviti-po-kilkosti-testiv-na-koronavirus-ce-shlyah-do-katastrofy/" target="_blank">писали</a>, що Україна займає останнє місце за кількістю тестів на коронавірус серед 50 країн, щодо яких збирається статистика.
-        </p>
+       <p><b>Читайте найважливіші матеріали та корисну інформацію у нашому <a href="https://texty.org.ua/theme/koronavirus-najvazhlyvishe/">спеціальному розділі про COVID-19</a> </b></p>
 
 
     <div class="donate-us">
