redraw on resize

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <!--<div class="source">Дані: https://public.tableau.com/profile/publicviz#!/vizhome/monitor_15841091301660</div>-->
         </div>
 
-       <p><b>Читайте найважливіші матеріали та корисну інформацію у нашому <a href="https://texty.org.ua/theme/koronavirus-najvazhlyvishe/">спеціальному розділі про COVID-19</a> </b></p>
+       <p><b>Читайте найважливіші матеріали та корисну інформацію у нашому <a href="https://texty.org.ua/theme/koronavirus-najvazhlyvishe/">спеціальному розділі про COVID-19.</a> </b></p>
 
 
     <div class="donate-us">
