redraw on resize

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <div class="map" id="hex_suspected"></div>
             </div>
 
-            <h3>Кількість підтверджених випадків covid-19 по регіонах. Усього cтаном на <span class="current-date"></span> – <span class="numeral" id="confirmed_amount_"></span></h3>
+            <h3>Кількість підтверджених випадків covid-19 по регіонах. Усього cтаном на <span class="current-date"></span> – <span class="numeral" id="confirmed_amount"></span></h3>
             <div>
                 <p>По областях</p>
                 <div class="map" id="ch_confirmed"></div>
