redraw on resize

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             </div>
             <div>
                 <p>За координатами лікарні*</p>
-                <p class="source">*хворі на самоізоляції привʼязані до координат обласного центру</p>
+                <p style="font-size: 14px;">*хворі на самоізоляції привʼязані до координат обласного центру</p>
 
                 <div class="map" id="hex_confirmed"></div>
             </div>
