--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
        <p>Як видно з графіка, траєкторія для України наразі пролягає між лініями подвоєння за два і за три дні. Досвід інших країн свідчить, що цю зону необхідно залишити якнайшвидше – щоб не повторити сценарій, наприклад, Іспанії.</p>
          <div id="charts">
              <div id="growth_speed">
-                 <p class="source">*Коефіцієнт подвоєння станом на 3-04-2020 <br> Дані: Johns Hopkins CSSE github.com/CSSEGISandData/COVID-19</p>
+                 <p class="source">*2.8 дні - період подвоєння станом на 3-04-2020 <br> Дані: Johns Hopkins CSSE github.com/CSSEGISandData/COVID-19</p>
              </div>
         </div>
 
