--- a/index.html
+++ b/index.html
@@ -77,19 +77,27 @@
        <p>Насправді, коли зростання експоненційне, то в найгірших випадках кількість хворих може, наприклад, подвоюватися щодня, і якщо ми бачимо 1000 хворих в понеділок, то в наступну неділю їх стане вже 64 тисячі. Тому на графіку важливо показувати швидкість зростання, а не лише абсолютні числа. Швидкість зростання – це нахил траєкторії для країни: чим ближчий він до горизонтальної лінії, тим краще.</p>
        <p>Саме тому на нашому графіку, крім траєкторій країн, ви можете побачити сірі пунктирні лінії. Вони показують орієнтири для швидкості зростання кількості хворих. Такі лінії побудовані для кількох варіантів: коли випадки захворювання подвоюються щоденно (найбільша швидкість), щодва дні (трохи краще), щотри (ще краще) тощо.</p>
 
-       <h3 style="margin-top: 50px;">Кількість хворих в Україні подвоюється приблизно кожних 2.8 дні*</h3>
+       <h3 style="margin-top: 50px;">Станом на <span class="today"></span> кількість хворих в Україні подвоюється приблизно кожних <span id="last_dubble_koef"></span> дн.</h3>
        <p>Як видно з графіка, траєкторія для України наразі пролягає між лініями подвоєння за два і за три дні. Досвід інших країн свідчить, що цю зону необхідно залишити якнайшвидше – щоб не повторити сценарій, наприклад, Іспанії.</p>
          <div id="charts">
              <div id="growth_speed">
-                 <p class="source">*2.8 дні - період подвоєння станом на 3-04-2020 <br> Дані: Johns Hopkins CSSE github.com/CSSEGISandData/COVID-19</p>
+                 <p class="source">Дані: Johns Hopkins CSSE github.com/CSSEGISandData/COVID-19</p>
              </div>
+             <div id="growth_speed_per_day">
+                 <p>На графіку нижче показана швидкість подвоєння хворих в Україні по днях. Що вище лінія, то повільніше розповсюджується вірус. Тобто, значення на рівні 3.5 означає, що кількість хворих подвоююється кожні 3.5 дні.</p>
+                 <p class="source">Дані: Johns Hopkins CSSE github.com/CSSEGISandData/COVID-19</p>
+             </div>
+
+
         </div>
+
+       <!--*2.8 дні - період подвоєння станом на 3-04-2020 <br>-->
 
 
        <p>Для наступного графіка ми <a href="https://www.ft.com/__origami/service/image/v2/images/raw/http%3A%2F%2Fcom.ft.imagepublish.upp-prod-eu.s3.amazonaws.com%2F9c58dd44-6c77-11ea-89df-41bea055720b?fit=scale-down&quality=highest&source=next&width=1260" target="_blank">запозичили</a> ідею у Financial Times, але за точку відліку взяли не сотий випадок зараження, як FT, а першу смерть. В результаті отримали цікавий патерн: зверніть увагу, наскільки нижче сягає лінія, яка показує поширення захворювання в Україні, якщо порівнювати з більшістю інших країн. Так відбувається через те, що перша смерть була зафіксована в Україні при дуже малій кількості підтверджених хворих. Причина, ймовірно, полягає у відсутності масштабного тестування в нашій країні.</p>
 
        <div id="chart_wrapper">
-           <h3 class="">COVID-19. Кількість захворювань по днях, починаючи з першої смерті. Станом на <span id="today"></span>.</h3>
+           <h3 class="">COVID-19. Кількість захворювань по днях, починаючи з першої смерті. Станом на <span class="today"></span>.</h3>
            <p class="">У багатьох країнах перша смерть зафіксована після приблизно сотні виявлених хворих. В Україні перша смерть сталася при дуже малій кількості виявлених хворих. Це, скоріше за все означає, що кількість проведених тестів була дуже малою.</p>
            <div class="" id="chart"></div>
            <p class="source">Дані: Johns Hopkins CSSE <br> github.com/CSSEGISandData/COVID-19</p>
@@ -219,6 +227,7 @@
     <script src="js/main.js"></script>
     <script src="js/map.js"></script>
     <script src="js/growth_speed.js"></script>
+    <script src="js/growth_speed_per_day.js"></script>
 
 
 
