--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                  <p class="source">Дані: Johns Hopkins CSSE github.com/CSSEGISandData/COVID-19</p>
              </div>
              <div id="growth_speed_per_day">
-                 <p>На графіку нижче показана швидкість подвоєння хворих в Україні по днях. Що вище лінія, то повільніше розповсюджується вірус. Тобто, значення на рівні 3.5 означає, що кількість хворих подвоююється кожні 3.5 дні.</p>
+                 <p>На графіку нижче показана швидкість подвоєння хворих в Україні по днях. Що вище лінія, то повільніше розповсюджується вірус, наприклад, значення на рівні 3.5 означає, що кількість хворих подвоююється кожні 3.5 дні.</p>
                  <p class="source">Дані: Johns Hopkins CSSE github.com/CSSEGISandData/COVID-19</p>
              </div>
 
