--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
 
    <main>
         <h1>Вірус: хворі в Україні та світі. Оновлюється</h1>
-        <h3 class="lead">Чим ефективніший карантин та інші заходи з протидії вірусу – такі як <a href="https://texty.org.ua/articles/100519/ukrayina-na-ostannomu-misci-u-sviti-po-kilkosti-testiv-na-koronavirus-ce-shlyah-do-katastrofy/" target="_blank">тестування</a>, відстеження всіх хворих та їх ізоляція, <a href="https://texty.org.ua/fragments/100572/chomu-maska-dlya-kozhnoho-ce-duzhe-vazhlyvo/" target="_blank">масове носіння масок</a> – тим повільніше поширюється захворювання. Порівняйте траєкторію зростання кількості хворих в Україні та в інших країнах.</h3>
+        <h3 class="lead">Чим ефективніший карантин та інші заходи з протидії вірусу – такі як <a href="https://texty.org.ua/articles/100519/ukrayina-na-ostannomu-misci-u-sviti-po-kilkosti-testiv-na-koronavirus-ce-shlyah-do-katastrofy/" target="_blank">тестування</a>, відстеження всіх хворих та їх ізоляція, <a href="https://texty.org.ua/fragments/100572/chomu-maska-dlya-kozhnoho-ce-duzhe-vazhlyvo/" target="_blank">масове носіння масок</a> – тим повільніше поширюється захворювання. Порівняйте траєкторію зростання кількості хворих в Україні та в інших країнах. Оновлено: <span class="current-date"></span>.</h3>
+
+       <p style="margin: 20px auto 40px auto;"><span style="background-color: rgba(237, 103, 70, 0.15);"><b>Застереження:</b> у зв'язку з невеликою кількістю тестів, що проводяться в Україні, значна частина хворих може не потрапляти в офіційні дані. Всі графіки, що ничже, у кращому випадку, можуть лише відображати динаміку зростання хворих в Україні якісним чином, але не кількісним.</span></p>
 
 
        <p class="">Під час епідемій головною інформацією є не лише кількість хворих, а швидкість та прискорення, з якими вони з’являються. На жаль, більшість ЗМІ цього не розуміє і використовує сенсаційну форму подачі інформації на кшталт “новий рекорд кількості хворих...”.</p>
