--- a/index.html
+++ b/index.html
@@ -79,16 +79,17 @@
        <p>Насправді, коли зростання експоненційне, то в найгірших випадках кількість хворих може, наприклад, подвоюватися щодня, і якщо ми бачимо 1000 хворих в понеділок, то в наступну неділю їх стане вже 64 тисячі. Тому на графіку важливо показувати швидкість зростання, а не лише абсолютні числа. Швидкість зростання – це нахил траєкторії для країни: чим ближчий він до горизонтальної лінії, тим краще.</p>
        <p>Саме тому на нашому графіку, крім траєкторій країн, ви можете побачити сірі пунктирні лінії. Вони показують орієнтири для швидкості зростання кількості хворих. Такі лінії побудовані для кількох варіантів: коли випадки захворювання подвоюються щоденно (найбільша швидкість), щодва дні (трохи краще), щотри (ще краще) тощо.</p>
 
-       <h3 style="margin-top: 50px;">Станом на <span class="today"></span> кількість хворих в Україні подвоюється приблизно кожних <span id="last_dubble_koef"></span> дн.</h3>
-       <p>Як видно з графіка, траєкторія для України наразі пролягає між лініями подвоєння за два і за три дні. Досвід інших країн свідчить, що цю зону необхідно залишити якнайшвидше – щоб не повторити сценарій, наприклад, Іспанії.</p>
+       <h3 style="margin-top: 50px;">Станом на <span class="today"></span>
+           кількість хворих в Україні подвоюється приблизно кожних <span id="last_dubble_koef"></span> дн.</h3>
+       <p>Як видно з графіка, траєкторія для України наразі пролягає між лініями подвоєння за три і за пʼять днів.</p>
          <div id="charts">
              <div id="growth_speed">
                  <p class="source">Дані: Johns Hopkins CSSE github.com/CSSEGISandData/COVID-19</p>
              </div>
-             <div id="growth_speed_per_day">
-                 <p>На графіку нижче показана швидкість подвоєння хворих в Україні по днях. Що вище лінія, то повільніше розповсюджується вірус, наприклад, значення на рівні 3.5 означає, що кількість хворих подвоюється кожні 3.5 дні.</p>
-                 <p class="source">Дані: Johns Hopkins CSSE github.com/CSSEGISandData/COVID-19</p>
-             </div>
+             <!--<div id="growth_speed_per_day">-->
+                 <!--<p>На графіку нижче показана швидкість подвоєння хворих в Україні по днях. Що вище лінія, то повільніше розповсюджується вірус, наприклад, значення на рівні 3.5 означає, що кількість хворих подвоюється кожні 3.5 дні.</p>-->
+                 <!--<p class="source">Дані: Johns Hopkins CSSE github.com/CSSEGISandData/COVID-19</p>-->
+             <!--</div>-->
 
 
         </div>
