--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
        <p>Насправді, коли зростання експоненційне, то в найгірших випадках кількість хворих може, наприклад, подвоюватися щодня, і якщо ми бачимо 1000 хворих в понеділок, то в наступну неділю їх стане вже 64 тисячі. Тому на графіку важливо показувати швидкість зростання, а не лише абсолютні числа. Швидкість зростання – це нахил траєкторії для країни: чим ближчий він до горизонтальної лінії, тим краще.</p>
        <p>Саме тому на нашому графіку, крім траєкторій країн, ви можете побачити сірі пунктирні лінії. Вони показують орієнтири для швидкості зростання кількості хворих. Такі лінії побудовані для кількох варіантів: коли випадки захворювання подвоюються щоденно (найбільша швидкість), щодва дні (трохи краще), щотри (ще краще) тощо.</p>
 
-       <h3 style="margin-top: 50px;">Станом на <span class="today"></span>
-           кількість хворих в Україні подвоюється приблизно кожних <span id="last_dubble_koef"></span> дн.</h3>
-       <p>Як видно з графіка, траєкторія для України наразі пролягає між лініями подвоєння за три і за пʼять днів.</p>
+       <!--<h3 style="margin-top: 50px;">Станом на <span class="today"></span> кількість хворих в Україні подвоюється приблизно кожних <span id="last_dubble_koef"></span> дн.</h3>-->
+       <h3 style="margin-top: 50px;">Станом на <span class="today"></span> кількість хворих в Україні продовжує зростати</h3>
+       <p>Як видно з графіка, нахил лінії для України на останньому відрізку найбільше нагадує нахил, характерний для подвоєння щопʼять днів</p>
          <div id="charts">
              <div id="growth_speed">
                  <p class="source">Дані: Johns Hopkins CSSE github.com/CSSEGISandData/COVID-19</p>
