додала графік по медикам

--- a/index.html
+++ b/index.html
@@ -72,14 +72,27 @@
         <h1>Вірус: хворі в Україні та світі. Оновлюється</h1>
         <h3 class="lead">Чим ефективніший карантин та інші заходи з протидії вірусу – такі як <a href="https://texty.org.ua/articles/100519/ukrayina-na-ostannomu-misci-u-sviti-po-kilkosti-testiv-na-koronavirus-ce-shlyah-do-katastrofy/" target="_blank">тестування</a>, відстеження всіх хворих та їх ізоляція, <a href="https://texty.org.ua/fragments/100572/chomu-maska-dlya-kozhnoho-ce-duzhe-vazhlyvo/" target="_blank">масове носіння масок</a> – тим повільніше поширюється захворювання. Порівняйте траєкторію зростання кількості хворих в Україні та в інших країнах. Оновлено: <span class="current-date"></span>.</h3>
 
+
+
+
        <p style="margin: 20px auto 40px auto;"><span style="background-color: rgba(237, 103, 70, 0.15);"><b>Застереження:</b> у зв'язку з невеликою кількістю тестів, що проводяться в Україні, значна частина хворих може не потрапляти в офіційні дані. Всі графіки, що ничже, у кращому випадку можуть лише відображати динаміку зростання хворих в Україні якісним чином, але не кількісним.</span></p>
 
+       <p><b>Навігація по матеріалу:</b></p>
+       <p><a href="#nav-1">Швидкість зростання хворих на covid-19 в Україні</a></p>
+       <p><a href="#chart_wrapper">Хворі в Україні та інших країнах (порівняння)</a></p>
+       <p><a href="#maps">Кількість хворих та померлих у Україні в розрізі регіонів і лікарень</a></p>
+       <p style="margin-bottom: 50px;"><b>нове </b><a href="#medical">Хворі медпрацівники</a>  </p>
 
-       <p class="">Під час епідемій головною інформацією є не лише кількість хворих, а швидкість та прискорення, з якими вони з’являються. На жаль, більшість ЗМІ цього не розуміє і використовує сенсаційну форму подачі інформації на кшталт “новий рекорд кількості хворих...”.</p>
+
+
+
+
+
+       <p>Під час епідемій головною інформацією є не лише кількість хворих, а швидкість та прискорення, з якими вони з’являються. На жаль, більшість ЗМІ цього не розуміє і використовує сенсаційну форму подачі інформації на кшталт “новий рекорд кількості хворих...”.</p>
        <p>Насправді, коли зростання експоненційне, то в найгірших випадках кількість хворих може, наприклад, подвоюватися щодня, і якщо ми бачимо 1000 хворих в понеділок, то в наступну неділю їх стане вже 64 тисячі. Тому на графіку важливо показувати швидкість зростання, а не лише абсолютні числа. Швидкість зростання – це нахил траєкторії для країни: чим ближчий він до горизонтальної лінії, тим краще.</p>
        <p>Саме тому на нашому графіку, крім траєкторій країн, ви можете побачити сірі пунктирні лінії. Вони показують орієнтири для швидкості зростання кількості хворих. Такі лінії побудовані для кількох варіантів: коли випадки захворювання подвоюються щоденно (найбільша швидкість), щодва дні (трохи краще), щотри (ще краще) тощо.</p>
 
-       <h3 style="margin-top: 50px;">Станом на <span class="today"></span> кількість хворих в Україні подвоюється приблизно кожних <span id="last_dubble_koef"></span> дн.</h3>
+       <h3 id="nav-1" style="margin-top: 50px;">Станом на <span class="today"></span> кількість хворих в Україні подвоюється приблизно кожних <span id="last_dubble_koef"></span> дн.</h3>
        <!--<h3 style="margin-top: 50px;">Станом на <span class="today"></span> кількість хворих в Україні продовжує зростати</h3>-->
        <!--<p>Як видно з графіка, нахил лінії для України на останньому відрізку найбільше нагадує нахил, характерний для подвоєння щопʼять днів</p>-->
          <div id="charts">
@@ -144,7 +157,22 @@
                 <div class="map" id="hex_died"></div>
             </div>
             <!--<div class="source">Дані: https://public.tableau.com/profile/publicviz#!/vizhome/monitor_15841091301660</div>-->
-        </div>
+
+       <p style="grid-column: 1/-1; text-align: left; margin-bottom: 50px;">Інформації про кількість хворих медиків у розрізі лікарень ми наразі не маємо. Її наявність допомогла б скооординувати зусилля громадськості та волонтерів на забезпечення цих лікарень необхідними засобами захисту. Незважаючи на те, що в даних НСЗУ міститься позначка щодо того, чи є хворий медпрацівником, понад 90% таких позначок мають відмітку "на самоізоляції", тобто зазначені з привʼязкою до області, а не до лікарні. Тому на разі ми можемо порівнювати між собою області, а не конкретні лікарні. Графік показує дані по днях і у відсотках до загальної кількості хворих - перемикач в заголовку.</p>
+       </div>
+
+
+
+       <div id="medical" style="grid-column:1/-1;">
+
+       <h3>Хворі на COVID-19 медики
+           <span id="medical_percent" class="med-covid med-covid-active">відсоток від загальної к-ті хворих</span> /
+           <span id="is_medical" class="med-covid" >кількість по днях</span></h3>
+
+       </div>
+
+
+
 
        <p><b>Читайте найважливіші матеріали та корисну інформацію у нашому <a href="https://texty.org.ua/theme/koronavirus-najvazhlyvishe/">спеціальному розділі про COVID-19.</a> </b></p>
 
@@ -231,6 +259,7 @@
     <script src="js/map.js"></script>
     <script src="js/growth_speed.js"></script>
     <script src="js/growth_speed_per_day.js"></script>
+    <script src="js/medical_workers.js"></script>
 
 
 
