додала графік по медикам

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
        <p><b>Навігація по матеріалу:</b></p>
        <p><a href="#nav-1">Швидкість зростання хворих на covid-19 в Україні</a></p>
        <p><a href="#chart_wrapper">Хворі в Україні та інших країнах (порівняння)</a></p>
-       <p><a href="#maps">Кількість хворих та померлих у Україні в розрізі регіонів і лікарень</a></p>
-       <p style="margin-bottom: 50px;"><b>нове </b><a href="#medical">Хворі медпрацівники</a>  </p>
+       <p><a href="#maps">Кількість осіб з підозрою, хворих і померлих у Україні по регіонах та лікарнях</a></p>
+       <p style="margin-bottom: 50px;"><a href="#medical">Хворі на COVID-19 медики</a> <b>нове </b></p>
 
 
 
@@ -122,7 +122,8 @@
        <p>Ще одна особливість цього графіка – вісь Y має логарифмічний, а не звичний для нас лінійний масштаб. Це означає, що точки на однакових інтервалах вздовж осі Y мають значення, що відрізняються в десятки разів. Тобто, діагональна лінія на такому графіку – це експоненційне зростання. Якщо крива відхиляється вниз до  горизонталі (наприклад, Китай) – це значить, що ситуація покращується; якщо відхиляється вище вгору до вертикалі – це означає, що відбувається неконтрольоване поширення вірусу.</p>
 
        <h3 style="margin-top: 50px;">Детальніше про ситуацію в Україні</h3>
-       <p>Наразі в Україні <a href="https://texty.org.ua/fragments/100636/uryad-zaklykayut-vidkryty-dani-po-covid-19/">відсутні</a> офіційні відкриті дані щодо ситуації з коронавірусом. Для графіків нижче дані взяті з <a href="https://public.tableau.com/profile/publicviz#!/vizhome/monitor_15841091301660/sheet0">дашборду</a> на tableau public, що створений Директоратом регіональної політики Офісу Президента. <b>Цифри в цьому графіку і в попередніх можуть відрізнятись через різну швидкість оновлення даних в різних джерелах</b>. Наведіть на регіон або гексагон, щоб побачити інформацію по кількості.
+       <!--<p>Наразі в Україні <a href="https://texty.org.ua/fragments/100636/uryad-zaklykayut-vidkryty-dani-po-covid-19/">відсутні</a> офіційні відкриті дані щодо ситуації з коронавірусом. Для графіків нижче дані взяті з <a href="https://public.tableau.com/profile/publicviz#!/vizhome/monitor_15841091301660/sheet0">дашборду</a> на tableau public, що створений Директоратом регіональної політики Офісу Президента.</p>-->
+           <p><b>Цифри в наступних графіках і в попередніх можуть відрізнятись через різну швидкість оновлення даних в різних джерелах</b>. Наведіть на регіон або гексагон, щоб побачити інформацію по кількості.
 
         <div id="maps">
             <h3>Кількість підозр на covid-19 по регіонах. Усього cтаном на <span class="current-date"></span> – <span class="numeral" id="suspected_amount"></span></h3>
@@ -156,7 +157,7 @@
                 <p>За координатами лікарні</p>
                 <div class="map" id="hex_died"></div>
             </div>
-            <!--<div class="source">Дані: https://public.tableau.com/profile/publicviz#!/vizhome/monitor_15841091301660</div>-->
+            <div class="source">Дані: <a href="https://nszu.gov.ua/covid/dashboard">Національна служба здоровʼя України</a></div>
 
        <p style="grid-column: 1/-1; text-align: left; margin-bottom: 50px;">Інформації про кількість хворих медиків у розрізі лікарень ми наразі не маємо. Її наявність допомогла б скооординувати зусилля громадськості та волонтерів на забезпечення цих лікарень необхідними засобами захисту. Незважаючи на те, що в даних НСЗУ міститься позначка щодо того, чи є хворий медпрацівником, понад 90% таких позначок мають відмітку "на самоізоляції", тобто зазначені з привʼязкою до області, а не до лікарні. Тому на разі ми можемо порівнювати між собою області, а не конкретні лікарні. Графік показує дані по днях і у відсотках до загальної кількості хворих - перемикач в заголовку.</p>
        </div>
@@ -169,6 +170,7 @@
            <span id="medical_percent" class="med-covid med-covid-active">відсоток від загальної к-ті хворих</span> /
            <span id="is_medical" class="med-covid" >кількість по днях</span></h3>
 
+           <div class="source">Дані: <a href="https://nszu.gov.ua/covid/dashboard">Національна служба здоровʼя України</a></div>
        </div>
 
 
