додала графік по медикам

--- a/index.html
+++ b/index.html
@@ -159,16 +159,16 @@
             </div>
             <div class="source">Дані: <a href="https://nszu.gov.ua/covid/dashboard">Національна служба здоровʼя України</a></div>
 
-       <p style="grid-column: 1/-1; text-align: left; margin-bottom: 50px;">Інформації про кількість хворих медиків у розрізі лікарень ми наразі не маємо. Її наявність допомогла б скооординувати зусилля громадськості та волонтерів на забезпечення цих лікарень необхідними засобами захисту. Незважаючи на те, що в даних НСЗУ міститься позначка щодо того, чи є хворий медпрацівником, понад 90% таких позначок мають відмітку "на самоізоляції", тобто зазначені з привʼязкою до області, а не до лікарні. Тому на разі ми можемо порівнювати між собою області, а не конкретні лікарні. Графік показує дані по днях і у відсотках до загальної кількості хворих - перемикач в заголовку.</p>
+       <p style="grid-column: 1/-1; text-align: left; margin-bottom: 50px;">Інформації про кількість хворих медиків у розрізі лікарень ми наразі не маємо. Її наявність допомогла б скооординувати зусилля громадськості та волонтерів на забезпечення цих лікарень необхідними засобами захисту. Незважаючи на те, що в даних НСЗУ міститься позначка щодо того, чи є хворий медпрацівником, понад 90% таких позначок мають відмітку "на самоізоляції", тобто зазначені з привʼязкою до області, а не до лікарні. Тому на разі ми можемо порівнювати між собою області, а не конкретні лікарні. Графік показує дані по днях і у відсотках до загальної кількості хворих.</p>
        </div>
 
 
 
        <div id="medical" style="grid-column:1/-1;">
 
-       <h3>Хворі на COVID-19 медики
-           <span id="medical_percent" class="med-covid med-covid-active">відсоток від загальної к-ті хворих</span> /
-           <span id="is_medical" class="med-covid" >кількість по днях</span></h3>
+       <h3>Хворі на COVID-19 медики (графік інтерактивний, нижче кнопки-перемикачі) <br>
+           <span id="medical_percent" class="med-covid med-covid-active">% від загальної кумулятивної к-ті хворих</span>
+           <span id="is_medical" class="med-covid" >к-ть по днях</span></h3>
 
            <div class="source">Дані: <a href="https://nszu.gov.ua/covid/dashboard">Національна служба здоровʼя України</a></div>
        </div>
