додала графік по медикам

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
        <div id="medical" style="grid-column:1/-1;">
 
        <h3>Хворі на COVID-19 медики (графік інтерактивний, нижче кнопки-перемикачі) <br>
-           <span id="medical_percent" class="med-covid med-covid-active">% від загальної кумулятивної к-ті хворих</span>
+           <span id="medical_percent" class="med-covid med-covid-active">% від кумулятивної к-ті хворих</span>
            <span id="is_medical" class="med-covid" >к-ть по днях</span></h3>
 
            <div class="source">Дані: <a href="https://nszu.gov.ua/covid/dashboard">Національна служба здоровʼя України</a></div>
